# restsuite

./: LICENSE  README.md  auth.py  pyproject.toml  rest.py  restlet.py
restsuite/: __init__.py  auth.py  base_rest.py  rest.py  restlet.py  suiteql.py
restsuite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
suitepy/: suiteql.py
